# genai-tester

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.yaml
.claude/: settings.json  settings.local.json
corpus/: prompts.yaml
genai_tester/: __main__.py  _version.py  certs.py  cli.py  corpus.py  employee.py  log.py  models.py  server.py
tests/: test_local_e2e.py
tools/: dlp_addon.py
