[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-tester"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "cryptography>=42",
    "pyyaml>=6.0",
]

[project.scripts]
genai-tester = "genai_tester.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["genai_tester"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
